# atom

./: .env  .gitattributes  .gitignore  .gitmodules  Cargo.toml  atom.code-workspace  clippy.toml  flake.nix  run_client.bat  run_client_host_server.bat  run_host_server.bat  todo.md
crates/ability/: Cargo.toml  todo.md
crates/ability/examples/: attribute.rs  base_attack.rs
crates/ability/examples/ability/: attribute.rs  base_attack.rs  main.rs
crates/ability/src/: bundle.rs  lib.rs
crates/ability/src/ability/: ability_tag.rs  bundle.rs  comp.rs  event.rs  mod.rs  plugin.rs
crates/ability/src/attribute/: attribute_set.rs  mod.rs  modifier.rs
crates/ability/src/buff/: bundle.rs  event.rs  layer.rs  mod.rs  plugin.rs  state.rs  timer.rs
crates/ability/src/effect/: bundle.rs  event.rs  graph_map.rs  mod.rs  state.rs  tag.rs  timer.rs
crates/ability/src/example/: mod.rs
crates/ability/src/graph/: blackboard.rs  builder.rs  bundle.rs  context.rs  event.rs  executor.rs  graph_map.rs  mod.rs  node.rs  pin.rs  state.rs
crates/ability/src/nodes/: blackboard.rs  bundle.rs  graph.rs  mod.rs  node.rs  pin.rs  timer.rs
crates/ability/src/state/: mod.rs
crates/ability/src/stateset/: mod.rs
crates/anime/: Cargo.toml
crates/anime/examples/: ue.rs
crates/atom/: Cargo.toml
crates/atom/src/: main.rs
crates/atom/src/camera/: mod.rs
crates/atom/src/isosurface/: mod.rs
crates/atom/src/log/: mod.rs
crates/atom/src/material/: mod.rs
crates/atom/src/octree/: mod.rs
crates/atom/src/renderdoc/: mod.rs
crates/atom/src/terrain/: bundle.rs  mod.rs  settings.rs  terrain.rs  terrain_data.rs  visible_areas.rs
crates/atom/src/ui/: mod.rs
crates/atom/src/visible/: mod.rs  visible_areas.rs
crates/atom_camera/: Cargo.toml
crates/atom_camera/src/: active_camera_controller.rs  bundle.rs  lib.rs  setting.rs
crates/atom_internal/: Cargo.toml
crates/atom_internal/src/: app_state.rs  lib.rs  physical.rs  plugins.rs  shaders.rs
crates/cel_shader/: Cargo.toml
crates/cel_shader/examples/: back_facing.rs
crates/cel_shader/src/: back_facing.rs  cel_material.rs  lib.rs
crates/cms/: Cargo.toml
crates/cms/src/: address.rs  cms.rs  densy_function.rs  iso_surface.rs  lib.rs  main.rs  mesh.rs  shape_surface.rs
crates/cms/src/cms/: bundle.rs  cms.rs  mod.rs  seg_component.rs  tessellation.rs
crates/cms/src/mesh/: mesh.rs  mod.rs
crates/cms/src/octree/: address.rs  bundle.rs  cell.rs  edge.rs  edge_block.rs  face.rs  mod.rs  octree.rs  point.rs  strip.rs  tables.rs  vertex.rs
crates/cms/src/sample/: mod.rs  sample_info.rs  sample_range_3d.rs
crates/cms/src/surface/: densy_function.rs  shape_surface.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  load.rs  persist.rs  plugin.rs  setting_path.rs  toml_diff.rs
crates/datatables/: Cargo.toml  gen_bin.bat  gen_json.bat
crates/datatables/examples/: tables_load.rs
crates/datatables/luban_lib/: Cargo.toml
crates/datatables/luban_lib/src/: lib.rs  table.rs
crates/datatables/src/: asset_barrier.rs  lib.rs  main.rs  tables_system_param.rs
crates/game/: Cargo.toml
crates/game/src/: lib.rs  state.rs
crates/game/src/ai/: mod.rs
crates/game/src/attr/: attr_base.rs  attr_modifier.rs
crates/game/src/camera/: mod.rs
crates/game/src/damage/: mod.rs
crates/game/src/input/: mod.rs  setting.rs
crates/game/src/items/: bundle.rs  category.rs  comp.rs  inventory.rs  mod.rs  plugin.rs
crates/game/src/network/: app_build.rs  bevy_bundle.rs  client.rs  mod.rs  protocol.rs  server.rs  shared.rs
crates/game/src/player/: bundle.rs  mod.rs
crates/game/src/projectile/: event.rs  hit.rs  lifetime.rs  mod.rs  movement.rs  plugin.rs
crates/game/src/scene/: mod.rs
crates/game/src/spline_mesh/: mod.rs
crates/game/src/unit/: attr_set.rs  base.rs  bundle.rs  mod.rs  monster.rs  npc.rs  player.rs
crates/game/src/window/: mod.rs
crates/layertag/: Cargo.toml
crates/layertag/examples/: tag.rs
crates/layertag/layertag_derive/: Cargo.toml
crates/layertag/layertag_derive/src/: lib.rs
crates/layertag/src/: builder.rs  container.rs  container_op.rs  count_container.rs  count_layertag.rs  layertag.rs  lib.rs  registry.rs  single_container.rs  tag.rs
crates/log_layers/: Cargo.toml
crates/log_layers/src/: file_layer.rs  lib.rs
crates/network/: Cargo.toml
crates/network/src/: app.rs  settings.rs  shared.rs
crates/settings/: Cargo.toml
crates/settings/settings_derive/: Cargo.toml
crates/settings/settings_derive/src/: lib.rs
crates/settings/src/: lib.rs  load.rs  persist.rs  setting_path.rs  toml_diff.rs
crates/terrain/: Cargo.toml  build_all_features.bat
crates/terrain/examples/: change_mesh.rs  main.rs
crates/terrain/src/: bundle.rs  lib.rs  me.md  setting.rs  tables.rs
crates/terrain/src/camera/: mod.rs
crates/terrain/src/chunk/: chunk_data.rs  chunk_mapper.rs  mod.rs
crates/terrain/src/chunk_mgr/: bundle.rs  chunk_event.rs  chunk_loader.rs  chunk_mapper.rs  chunk_mesh.rs  event.rs  mod.rs  plugin.rs
crates/terrain/src/ecology/: mod.rs
crates/terrain/src/isosurface/: comp.rs  lod.rs  mod.rs  state.rs  voxel.rs
crates/terrain/src/lod/: lod_gizmos.rs  lod_octree.rs  mod.rs  morton_code.rs  morton_code_neighbor.rs  neighbor_query.rs
crates/terrain/src/log/: mod.rs
crates/terrain/src/map/: compute_height.rs  config.rs  map_diagram.rs  mod.rs  topography.rs
crates/terrain/src/material/: mod.rs
crates/terrain/src/materials/: mod.rs  terrain_debug.rs  terrain_material.rs
crates/terrain/src/terrain/: bundle.rs  mod.rs  settings.rs  terrain_data.rs
crates/terrain/src/ui/: mod.rs
crates/terrain/src/utils/: mod.rs
crates/terrain_core/: Cargo.toml
crates/terrain_player/: Cargo.toml
crates/terrain_player/src/: main.rs
crates/terrain_player_client/: Cargo.toml
crates/terrain_player_client/src/: lib.rs  order.rs
datatables/gen_json/cfg/: Cargo.toml
entries/client/: Cargo.toml
entries/client/src/: main.rs
entries/entry/: Cargo.toml
entries/entry/src/: debug_dump.rs  main.rs
tools/terrain_player/: Cargo.toml
tools/terrain_player/src/: main.rs
(+528 files in other folders)
