# [package]
# name = "terrain"
# version = "0.1.0"
# edition = "2021"

[workspace]
members = ["crates/*", "entries/*"]
resolver = "2"


[workspace.dependencies]

bevy = { version = "0.14.2", features = [
    "file_watcher",
    "embedded_watcher",
    "bevy_dev_tools",
    "trace",
    "trace_tracy",
    "serialize",
] }

bevy_asset_loader = { version = "0.21", features = [
    "2d",
    "3d",
    "standard_dynamic_assets",
] }

bevy_asset_loader_derive = { version = "0.21" }
bevy_atmosphere = { version = "0.10.0" }
# bevy_mod_scripting_rune = { version = "0.6.0" }
lightyear = { version = "^0.17", features = [
    "avian3d",
    "leafwing",
    "webtransport",
    "websocket",
    "steam",
    "zstd",
    # "metrics",
    # "trace",
    # "mock_time",
    # "big_messages"
] }

aery = { version = "0.7.3" }

bevy_console = { git = "https://github.com/qiboda/bevy-console.git", branch = "atom_main" }

once_cell = "1.19.0"
serde = { version = "1.0.210", features = ["derive"] }
smallvec = { version = "1.13.2" }
thiserror = { version = "1.0.61" }

bitflags = { version = "2.6.0", features = ["serde"] }
bevy-tnua = { version = "0.19.0", features = [] }
bevy-tnua-avian3d = { version = "0.1.1" }
bevy_debug_grid = { version = "0.6.0" }
# bevy-persistent
# big-brain = { version = "0.20.0" }
seldom_state = { version = "0.11" }
# Bevy Hanabi
oxidized_navigation = { version = "0.11.0", default-features = false, features = [
    # "xpbd",
    "debug_draw",
] }
# leafwing-input-manager = { git = "https://github.com/qiboda/leafwing-input-manager.git", branch = "atom_main" }
leafwing-input-manager = { version = "0.15", features = [
    "asset",
    "ui",
    "mouse",
    "keyboard",
    "gamepad",
    "timing",
] }
# bevy-sysfail
# bevy-trait-query = { path = "../../bevy-trait_query" }
# bevy trait resource
# bevy_enum_filter
bevy_common_assets = { version = "0.11.0", features = ["toml"] }
bevy_mod_picking = { version = "0.20", features = ["backend_avian"] }
autoincrement = { version = "1.0" }
crossbeam-channel = { version = "0.5.13" }

noise = { version = "0.9.0", features = ["images"] }
image = { version = "0.25", features = ["jpeg", "png"] }
bytemuck = { version = "1.16" }
clap = { version = "4.5.8", features = ["derive"] }

tracing = { version = "0.1.40", features = [] }
wgpu-types = { version = "0.20.0" }
wgpu = { version = "0.20.1" }

avian3d = { version = "0.1.2", features = ["serialize"] }
dotenv = { version = "0.15.0" }
vleue_navigator = { version = "0.8.0" }

num-traits = "0.2.14"
paste = "1.0.15"

rand = { version = "0.8.5" }

# AI
# utility ai
# https://github.com/ItsDoot/bevy_observed_utility
# big-brain = { git = "https://github.com/stargazing-dino/big-brain.git", branch = "update-14.0" }
# goap
# https://github.com/victorb/dogoap
# htn
# https://github.com/QueenOfSquiggles/bevy_htnp

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 0

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# [profile.release-with-debug]
# inherits = "release"
# debug = true

# can not patch cross version, otherwie plugin will not work.
# [patch.crates-io]
# bevy = { path = '../bevy' }
# bevy_math = { path = '../bevy/crates/bevy_math' }

# bevy easy compute
