# [package]
# name = "terrain"
# version = "0.1.0"
# edition = "2024"

[workspace]
members = ["crates/*", "entries/*"]
resolver = "2"


[workspace.dependencies]

bevy = { version = "0.16.1", features = [
    "file_watcher",
    "embedded_watcher",
    "trace",
    "trace_tracy",
    "serialize",
] }

bevy_asset_loader = { version = "0.23", features = [
    "2d",
    "3d",
    "standard_dynamic_assets",
] }

bevy_asset_loader_derive = { version = "0.23" }
bevy_atmosphere = { version = "0.13.0" }
# bevy_mod_scripting_rune = { version = "0.6.0" }
lightyear = { version = "0.22.5", features = [
    "avian3d",
    "leafwing",
    "webtransport",
    "websocket",
    "steam",
    # "zstd",
    # "metrics",
    # "trace",
    # "mock_time",
    # "big_messages"
] }

# aery = { version = "0.8.1" }


bevy_landmass = { version = "0.9.0" }

once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
smallvec = { version = "1.15.1" }
thiserror = { version = "2.0.12" }

bitflags = { version = "2.9.1", features = ["serde"] }
bevy-tnua = { version = "0.24.0", features = [] }
bevy-tnua-avian3d = { version = "0.5.0" }
# bevy-persistent
# big-brain = { version = "0.22.0" }
seldom_state = { version = "0.14" }
# Bevy Hanabi
# oxidized_navigation = { version = "0.12.0", default-features = false, features = [
#     "avian",
#     "debug_draw",
# ] }
# leafwing-input-manager = { git = "https://github.com/qiboda/leafwing-input-manager.git", branch = "atom_main" }
leafwing-input-manager = { version = "0.17", features = [
    "asset",
    "ui",
    "mouse",
    "keyboard",
    "gamepad",
    "timing",
] }
# bevy-sysfail
# bevy-trait-query = { path = "../../bevy-trait_query" }
# bevy trait resource
# bevy_enum_filter
bevy_common_assets = { version = "0.13.0", features = ["toml"] }
autoincrement = { version = "1.0" }
crossbeam-channel = { version = "0.5.15" }

noise = { version = "0.9.0", features = ["images"] }
image = { version = "0.25", features = ["jpeg", "png"] }
bytemuck = { version = "1.23.1" }
clap = { version = "^4.5.41", features = ["derive"] }

tracing = { version = "0.1.41", features = [] }
wgpu-types = { version = "26.0.0" }
wgpu = { version = "26.0.1" }

avian3d = { version = "0.3.1", features = ["serialize"] }
dotenv = { version = "0.15.0" }
vleue_navigator = { version = "0.12.0" }

num-traits = "0.2.19"
paste = "1.0.15"

rand = { version = "0.9.2" }

# AI
# utility ai
# https://github.com/ItsDoot/bevy_observed_utility
# big-brain = { git = "https://github.com/stargazing-dino/big-brain.git", branch = "update-14.0" }
# goap
# https://github.com/victorb/dogoap
# htn
# https://github.com/QueenOfSquiggles/bevy_htnp

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 0

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# [profile.release-with-debug]
# inherits = "release"
# debug = true

# can not patch cross version, otherwie plugin will not work.
# [patch.crates-io]
# bevy = { path = '../bevy' }
# bevy_math = { path = '../bevy/crates/bevy_math' }

# bevy easy compute
