[package]
name = "ability"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
# bevy-trait-query = "0.4.0"
# bevy-trait-query-impl = "0.4.0"
once_cell = { workspace = true }
smallvec = "1.13.0"
layertag = { path = "../layertag" }
paste = "1.0.14"

[[example]]
name = "ability"
path = "examples/ability/main.rs"
