[package]
name = "anime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.3", features = ["wgpu_trace", "trace", "trace_tracy"] }
bevy-inspector-egui = "0.19.0"

[[example]]
name = "ue"
path = "examples/ue.rs"
