[package]
name = "atom_internal"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_console = { workspace = true }
leafwing-input-manager = { workspace = true }
seldom_state = { workspace = true }
bevy_debug_grid = { workspace = true }

log_layers = { path = "../log_layers" }
settings = { path = "../settings" }
datatables = { path = "../datatables" }
project = { path = "../project" }
