[package]
name = "atom_internal"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
leafwing-input-manager = { workspace = true }
seldom_state = { workspace = true }
avian3d = { workspace = true }

log_layers = { path = "../log_layers" }
settings = { path = "../settings" }
datatables = { path = "../datatables" }
project = { path = "../project" }
atom_shader_lib = { path = "../atom_shader_lib" }
