[package]
name = "cms"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.32.2"
strum = { version ="0.24.1", features=["derive", "strum_macros"] }
strum_macros = "0.24.1"
bevy = { path = "../../../dep/bevy", features = ["trace", "trace_tracy"] }

# [patch.crates-io]
# bevy = { path = '../../../dep/bevy' }
#
# [patch."https://github.com/bevyengine/bevy"]
# bevy = { path = "../dep/bevy" }
# bevy_ecs = { path = "../dep/bevy/crates/bevy_ecs" }
# bevy_app = { path = "../dep/bevy/crates/bevy_app" }
# bevy_utils = { path = "../dep/bevy/crates/bevy_utils" }
# bevy_render = { path = "../dep/bevy/crates/bevy_render", optional = true }
