[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
bevy_common_assets = { workspace = true, features = ["toml"] }
serde = { workspace = true }

project ={ path = "../project" }
toml = "0.8.13"
serde_merge = "0.1.3"
