[package]
name = "datatables"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["json"]
json = ["serde_json", "cfg_json"]
bin = ["luban_lib", "cfg_bin"]

[dependencies]
lazy_static = "1.4.0"

cfg_json = { path = "gen_bin/cfg", optional = true }
serde_json = { version = "1.0.116", optional = true }

cfg_bin = { path = "gen_bin/cfg", optional = true }
luban_lib = { path = "luban_lib", optional = true }

[workspace]
members = ["gen/cfg", "gen/macros"]
