[package]
name = "datatables"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["datatable_json"]
datatable_json = ["serde_json"]
datatable_bin = []

[dependencies]
bevy = { workspace = true }
thiserror = { workspace = true }
event-listener = "5.3.1"

cfg = { path = "gen/cfg" }
serde_json = { version = "1.0.116", optional = true }
luban_lib = { path = "luban_lib" }
