[package]
name = "datatables"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
bevy = { workspace = true }
thiserror = { workspace = true }
atom_utils = { path = "../atom_utils" }

cfg = { path = "gen/cfg" }
serde_json = { version = "1.0.116" }
luban_lib = { path = "luban_lib" }
