[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
smallvec = { workspace = true }
serde = { workspace = true }
aery = { workspace = true }
# big-brain = { workspace = true }
bitflags = { workspace = true }
avian3d = { workspace = true }
bevy-tnua = { workspace = true }
bevy-tnua-avian3d = { workspace = true }
bevy_console = { workspace = true }
leafwing-input-manager = { workspace = true }
clap = { version = "4.5" }
atom_camera = { path = "../atom_camera" }
atom_utils = { path = "../atom_utils" }
atom_internal = { path = "../atom_internal" }


project = { path = "../project" }
ability = { path = "../ability" }
datatables = { path = "../datatables" }
settings = { path = "../settings" }
log_layers = { path = "../log_layers" }
