[package]
name = "layertag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
once_cell = "1.18.0"
layertag_derive = { path = "layertag_derive" }

[[example]]
name = "tag"
path = "examples/tag.rs"
