[package]
name = "network"
version = "0.17.0"
authors = ["Charles Bournhonesque <charlesbour@gmail.com>"]
edition = "2021"
rust-version = "1.76"
description = "Common harness for the lightyear examples"
readme = "../README.md"
repository = "https://github.com/cBournhonesque/lightyear"
keywords = ["bevy", "multiplayer", "networking", "netcode", "gamedev"]
categories = ["game-development", "network-programming"]
license = "MIT OR Apache-2.0"
exclude = ["/tests"]

[dependencies]
lightyear = { workspace = true }

# utils
anyhow = { version = "1.0.95", features = [] }
async-compat = "0.2.4"
cfg-if = "1.0.0"
clap = { workspace = true }
crossbeam-channel = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }

# bevy
bevy = { workspace = true }
bevy-inspector-egui = "0.28"
