[package]
name = "network"
version = "0.1.0"
edition = "2024"
exclude = ["/tests"]

[dependencies]
lightyear = { workspace = true }

# utils
anyhow = { version = "1.0.98", features = [] }
async-compat = "0.2.4"
cfg-if = "1.0.1"
clap = { workspace = true }
crossbeam-channel = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }

# bevy
bevy = { workspace = true }
bevy-inspector-egui = "0.32"
