[package]
name = "settings"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
bevy_common_assets = { workspace = true, features = ["toml", "ron"] }
serde = { workspace = true }
atom_utils = { path = "../atom_utils" }
settings_derive = { path = "settings_derive" }

project = { path = "../project" }
toml = "0.9.2"
serde_merge = "0.1.3"
ron = "0.10.1"
