[package]
name = "terrain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# feature "wgpu_trace", "trace_chrome", "dynamic_linking", "wayland", 
# bevy_mod_debugdump = "0.7.0"
bevy = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
# lightyear = { workspace = true }
smallvec = { workspace = true }
avian3d = { workspace = true }

strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
strum_macros = "0.26.4"
pqef = { path = "../pqef" }
project = { path = "../project" }
atom_internal = { path = "../atom_internal" }
atom_utils = { path = "../atom_utils" }
terrain_player_client = { path = "../terrain_player_client" }
terrain_core = { path = "../terrain_core" }
settings = { path = "../settings" }
log_layers = { path = "../log_layers" }
atom_shader_lib = { path = "../atom_shader_lib" }

rand = "0.8.5"
ndshape = { version = "0.3.0" }

noise = { workspace = true }

# bevy_obj = "0.13.0"

# bevy_ecs_ldtk = "0.5.0"
# bevy_ecs_tilemap = "0.9.0"
# bevy_rapier2d = "0.20.0"

serde_json = "1.0.120"
# bevy-inspector-egui = "0.23.4"
bitflags = { workspace = true }
bitfield-struct = "0.8.0"
bytemuck = { workspace = true }

crossbeam-channel = { workspace = true }

bevy_async_task = { version = "0.2.0" }
autoincrement = { workspace = true }
# oxidized_navigation = { workspace = true }
image = { workspace = true }
num-traits = { workspace = true }
wgpu-types = { workspace = true }
wgpu = { workspace = true }
thiserror = { workspace = true }
bevy_console = { workspace = true }
clap = { version = "4.5" }

paste = { workspace = true }

[dev-dependencies]
bevy_flycam = { version = "0.14.0" }
bevy_debug_grid = { workspace = true }
bevy-inspector-egui = { version = "0.25" }
dotenv = { workspace = true }
atom_renderdoc = { path = "../atom_renderdoc" }


[features]
# 默认是 cpu seam
default = ["cpu_seam"]

gpu_seam = []
cpu_seam = []
# cpu模拟gpu的代码运行，用于调试
simulate_gpu_seam = []
