[package]
name = "terrain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# feature "wgpu_trace", "trace_chrome", "dynamic_linking", "wayland", 
# bevy_mod_debugdump = "0.7.0"
bevy = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
# lightyear = { workspace = true }
smallvec = { workspace = true }
avian3d = { workspace = true }

strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
strum_macros = "0.26.4"
pqef = { path = "../pqef" }
project = { path = "../project" }
atom_internal = { path = "../atom_internal" }
atom_utils = { path = "../atom_utils" }
settings = { path = "../settings" }
log_layers = { path = "../log_layers" }
atom_shader_lib = { path = "../atom_shader_lib" }

rand = { workspace = true }
rand_distr = "0.4"
rand_pcg = "0.3"
fast_poisson = "1.0.0"
spade = { version = "2.12" }
voronator = { version = "0.2" }

ndshape = { version = "0.3.0" }

noise = { workspace = true }

# bevy_obj = "0.13.0"

# bevy_ecs_ldtk = "0.5.0"
# bevy_ecs_tilemap = "0.9.0"
# bevy_rapier2d = "0.20.0"

serde_json = "1.0.137"
bitflags = { workspace = true }
bitfield-struct = "0.10.0"
bytemuck = { workspace = true }

crossbeam-channel = { workspace = true }

bevy_async_task = { version = "0.4.0" }
autoincrement = { workspace = true }
oxidized_navigation = { workspace = true }
image = { workspace = true }
imageproc = { version = "0.25" }

num-traits = { workspace = true }
wgpu-types = { workspace = true }
wgpu = { workspace = true }
thiserror = { workspace = true }
bevy_asset_loader = { workspace = true }
clap = { workspace = true }
bevy_water = { version = "0.15" }

encase = { version = "0.10.0" }

paste = { workspace = true }

[dev-dependencies]
bevy_flycam = { version = "0.15.0" }
bevy-inspector-egui = { version = "0.28" }
dotenv = { workspace = true }
atom_renderdoc = { path = "../atom_renderdoc" }
# bevy_screen_diagnostics = { version = "0.6.0" }


[features]
# 默认是 cpu seam
default = []
