[package]
name = "terrain_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
project = { path = "../project" }
serde = { workspace = true }

tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
    "json",
    "local-time",
] }
tracing-chrome = { version = "0.7.2", optional = true }
tracing-tracy = { version = "0.11.0", optional = true }
tracing-log = "0.2.0"
tracing-error = { version = "0.2.0", optional = true }
tracy-client = { version = "0.17.0", optional = true }
tracing-appender = { version = "0.2.3", features = [] }
serde_json = "1.0.117"
