[package]
name = "terrain_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
terrain_player_client = { path = "../terrain_player_client" }
terrain_core = { path = "../terrain_core" }
terrain = { path = "../terrain" }

bevy_debug_grid = "0.4.0"
leafwing-input-manager = "0.11.2"
smooth-bevy-cameras = "0.10.0"

clap = { version = "4.4.10", features = ["derive"] }
serde = "1.0.193"
serde_json = "1.0.108"
