[package]
name = "terrain_player_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }

project = { path = "../project" }
terrain_core = { path = "../terrain_core" }
log_layers = { path = "../log_layers" }

enum-kinds = "0.5.1"
serde = { workspace = true }
serde_json = "1.0.120"
# tracing-appender = { version = "0.2.3", features = [] }
# tracing-serde = "0.1.3"
# tracing-test = "0.2.4"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
    "json",
    "local-time",
] }
tracing-appender = { version = "0.2.3", features = [] }
