[package]
name = "terrain_player_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }

project = { path = "../project" }
log_layers = { path = "../log_layers" }

enum-kinds = "0.5.1"
serde = { workspace = true }
serde_json = "1.0.137"
tracing-subscriber = { version = "0.3.19", features = [
    "registry",
    "env-filter",
    "json",
    "local-time",
] }
tracing-appender = { version = "0.2.3", features = [] }
