[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
terrain = { path = "../../crates/terrain" }
bevy = { workspace = true }

bevy_mod_debugdump = {  version = "0.10.0", optional = true }

[features]
default = []
debug_dump = ["dep:bevy_mod_debugdump"]

[dev-dependencies]
