[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game = { path = "../../crates/game" }
bevy = { workspace = true }
dotenv = { workspace = true }

bevy_mod_debugdump = { version = "0.11", optional = true }

[features]
default = []
# default = ["debug_dump"]
debug_dump = ["dep:bevy_mod_debugdump"]

[dev-dependencies]
