[package]
name = "cfg"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.x", features = ["derive"] }
serde_json = "1.0.x"
bitflags = { bitworkspace = true }
macros = {path = "../macros"}

bevy = { workspace = true }
thiserror = { workspace = true }
